add information by dni
